# z39

./: .gitignore  .mcp.json  CHANGELOG.md  Cargo.toml  README.md  build  build.sh
src/: lib.rs  main.rs  mcp.rs  solver.rs
src/domains/: config.rs  logic.rs  mod.rs  safety.rs  schedule.rs
src/job/: mod.rs
