[package]
name = "z39-solver"
version = "1.0.1"
edition = "2024"
description = "Z3-powered reasoning for AI agents. MCP server + CLI for scheduling, logic, config, and safety."
authors = ["Alejandro Quintanar"]
license = "Apache-2.0"
repository = "https://github.com/alejandroqh/z39"
keywords = ["z3", "smt", "solver", "mcp", "ai-agents"]
categories = ["command-line-utilities", "development-tools"]

[workspace]

[[bin]]
name = "z39"
path = "src/main.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
clap = { version = "4", features = ["derive"] }
turbomcp = { version = "3", features = ["stdio"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "process", "time", "io-std", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
dashmap = "6"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
zip = { version = "2", default-features = false, features = ["deflate"] }
tempfile = "3"
dirs = "5"